--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Evalsub27092021">
         <activity
+            android:name=".SearchableActivity"
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+
+            </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -19,5 +32,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
